# Ekilang

./: .gitignore  Cargo.toml  README.md  TYPING_SUPPORT.md  pyproject.toml
ekilang/: __init__.py  __main__.py  _rust_lexer.cp314-win_amd64.pyd  _rust_lexer.pyi  builtins.py  cli.py  executor.py  fast_executor.py  lexer.py  parser.py  runtime.py  types.py
examples/: advanced_parameters.eki  all_imports.eki  async.eki  async_for_await.eki  benchmark_intense.eki  benchmark_nqueens.eki  bitwise_not_and_scientific.eki  block_lambdas.eki  classes.eki  collections.eki  comprehensions.eki  conditionals.eki  context_manager.eki  decorators.eki  decorators_advanced.eki  decorators_practical.eki  destructuring.eki  ellipsis.eki  factorial.eki  fstring_formatting.eki  generators.eki  global_nonlocal.eki  imports.eki  inheritance.eki  kwonly_demo.eki  lambda_curry.eki  loop.eki  loop_else.eki  match.eki  null_operators.eki  number_formats.eki  operators.eki  pipeline_operators.eki  range_shorthand.eki  slicing.eki  string_prefixes.eki  template_strings.eki  typing.eki  var2.eki  variables.eki
src/: builtins.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
tests/: benchark.py  benchmark.py  benchmark_enhanced.py  benchmark_nqueens.py  benchmark_vs_python.py  test_args.py  test_async_for.py  test_basic.py  test_classes.py  test_comprehensions.py  test_decorators.py  test_decorators_practical.py  test_ellipsis.py  test_else.py  test_examples.py  test_fstring_formatting.py  test_global_nonlocal.py  test_kwonly.py  test_lambda_curry.py  test_loop.py  test_null_ops.py  test_pipes.py  (+14 more)
(+5 files in other folders)
