[project]
name = "ekilang"
version = "0.1.0"
description = "Ekilang: a Python-backed interpreted language with custom syntax"
authors = [{ name = "LoXewyX", email = "loxewyx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "ekilang._rust_lexer"
script-files = []
